--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,10 +48,65 @@ main{
 .record-card-container{
     display: flex;
     flex-direction: row;
+}
+.record-card{
+    background-color: rgb(146, 167, 167);
+    width: 100px;
+    height: 100px;
+}
 
+.record-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.record-card {
+    background: #222;
+    color: #fff;
+    padding: 15px;
+    border-radius: 12px;
+    height: 350px;
+    width: 220px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
+    transition: transform 0.2s ease-in-out;
+    overflow: hidden;
+}
+
+.record-card:hover {
+    transform: scale(1.05);
+}
+
+.film-image {
+    width: 100%;
+    height: 300px; 
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 10px;
 }
 
 /* ====== PROPERTY MODAL STYLES ====== */
-.property-modal{
-    display: none;
-}
+.property-modal {
+    display: none; /* gömd som default */
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
+  
+  .property-modal--visible {
+    display: flex;
+  }
+  
+  .property-modal__content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 500px;
+    color: #000;
+  }
