--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -2,7 +2,7 @@
     /* COLORS */
     --color-background: #000000; 
     --color-text: #ffffff; 
-    --color-primary: #ffd700; 
+    --color-primary: #ffe81f; 
     --color-secondary: #ff4500; 
     --color-card-bg: #1e1e1e; 
     --color-hover: #ffa500; 
