--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,7 +47,11 @@ header img {
     padding: var(--spacing-x-small) var(--spacing-x-large);
     background-color: var(--color-primary);
     font-size: var(--font-size-medium);
-
+}
+.category__buttons:hover,
+.category__buttons.active {
+  background-color: #3f3d3c52;
+  border-radius: 1rem;
 }
 
 /* ====== RECORD DISPLAY STYLES ====== */
@@ -66,13 +70,6 @@ main{
     
 }
 
-.record-card{
-    background-color: rgb(146, 167, 167);
-    width: 100px;
-    height: 100px;
-    margin: var(--spacing-medium);
-}
-
 .record-card {
     background: #222;
     color: var(--color-text);
@@ -84,6 +81,7 @@ main{
     box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
     transition: transform 0.2s ease-in-out;
     overflow: hidden;
+    margin: var(--spacing-medium);
 }
 
 .record-card:hover {
@@ -96,6 +94,12 @@ main{
     object-fit:cover; 
     border-radius: 8px;
 
+}
+/* ERROR MESSAGE */ 
+.error-message{
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
 }
 
 /* ====== PROPERTY MODAL STYLES ====== */
@@ -139,31 +143,31 @@ main{
       gap: var(--spacing-medium); 
       padding: 1.5rem;
     }
-  
     .record-card {
+      height: 450px;
       width: 250px;
   
     }
-    .property-modal__content {
-        width: 85%;
-        max-width: 450px;
-        padding: 25px;
-        font-size: 1rem;
+    .card-image {
+      height: 380px;
     }
-    
     .property-modal__close-button {
         font-size: 0.95rem;
         padding: 0.6rem 1.2rem;
     }
-  
-   
   }
   
   @media (max-width: 768px) {
     .record-card-container {
       grid-template-columns: repeat(2, 1fr);
     }
-
+    .record-card {
+      height: 400px;
+      width: 230px;
+  }
+    .card-image {
+      height: 350px;
+    }
   }
   
   @media (max-width: 480px) {
@@ -171,16 +175,20 @@ main{
         padding: 0 1.3rem;
         font-size: var(--font-size-base);
       }
-    
+
+      .record-card-container {
+        grid-template-columns: repeat(2, 1fr);
+      }
+  
     .record-card {
-        width: 160px;
-        height: auto;
-        padding: 1rem;
+        height: 280px;
+        width: 150px;
         font-size: 0.9rem;
       }
     
       .card-image {
-        height: 200px;
+        width: 150px;
+        height: 220px;
       }
     
       .property-modal__content {
@@ -197,6 +205,9 @@ main{
   }
 
 @media (max-width: 390px) {
+    header img {
+      height: 150px;
+    }
     .record-card-container {
         grid-template-columns: repeat(2, 1fr);
         gap: var(--spacing-x-small); 
@@ -205,10 +216,16 @@ main{
       }
       .record-card {
         width: 140px;
-        height: auto;
+        height: 250px;
         padding: var(--spacing-small);
-        font-size: 0.85rem;
+        font-size: 0.7rem;
       }
+
+      .card-image {
+        width: 130px;
+        height: 200px;
+      }
+    
       .property-modal__content {
         width: 95%;
         max-width: 300px;
@@ -222,5 +239,4 @@ main{
       }
        
 }
-
 
