--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,6 @@
 
 body {
     width: 100%;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     background-color: var(--color-background);
@@ -18,8 +17,7 @@ header{
    display: flex;
    flex-direction: column;
    align-items: center;
-   width: 100%;
-   height: 100vh;
+   width: 100%; 
 
 }
 header img {
@@ -57,7 +55,6 @@ header img {
 /* ====== RECORD DISPLAY STYLES ====== */
 main{
     width: 100%;
-    height: 100vh;
     flex-grow: 1; 
 }
 .record-card-container{
@@ -76,7 +73,8 @@ main{
     padding: var(--spacing-medium);
     border-radius: 12px;
     height: 350px;
-    width: 220px;
+    width: 100%;
+    max-width: 220px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
     transition: transform 0.2s ease-in-out;
